--- a/app/admin/view/content/product/edit.html
+++ b/app/admin/view/content/product/edit.html
@@ -7,6 +7,7 @@
     .CodeMirror div.CodeMirror-cursor {
         border-left: 1px solid #ffffff;
     }
+
     .CodeMirror {
         border: 1px solid #eee;
         font-size: 16px !important;
@@ -37,7 +38,8 @@
                                     <option value="0">顶级</option>
                                     {notempty name='category'}
                                     {volist name="category" id="vo"}
-                                    <option value="{$vo.id}" {if($data.category_id == $vo.id)}selected{/if}>{$vo.delimiter|raw}{$vo.name}</option>
+                                    <option value="{$vo.id}" {if($data.category_id==$vo.id)}selected{/if}>
+                                        {$vo.name}</option>
                                     {/volist}
                                     {/notempty}
                                 </select>
@@ -48,8 +50,8 @@
                                 <span class="x-red">*</span>热门
                             </label>
                             <div class="layui-input-block" id="hot">
-                                <input type="radio" name="hot" value="1" title="是" {if($data.hot == 1)}checked{/if}>
-                                <input type="radio" name="hot" value="2" title="否" {if($data.hot == 2)}checked{/if}>
+                                <input type="radio" name="hot" value="1" title="是" {if($data.hot==1)}checked{/if}>
+                                <input type="radio" name="hot" value="2" title="否" {if($data.hot==2)}checked{/if}>
                             </div>
                         </div>
                         <div class="layui-form-item">
@@ -58,7 +60,7 @@
                             </label>
                             <div class="layui-input-inline">
                                 <input type="text" id="listorder" name="listorder" required="" lay-verify="required"
-                                       autocomplete="off" class="layui-input" value="{$data.listorder}">
+                                    autocomplete="off" class="layui-input" value="{$data.listorder}">
 
                             </div>
                         </div>
@@ -68,7 +70,7 @@
                             </label>
                             <div class="layui-input-block w50">
                                 <input type="text" id="title" name="title" required="" lay-verify="required"
-                                       autocomplete="off" class="layui-input" value="{$data.title}">
+                                    autocomplete="off" class="layui-input" value="{$data.title}">
                             </div>
                         </div>
                         <div class="layui-form-item">
@@ -77,7 +79,7 @@
                             </label>
                             <div class="layui-input-block w50">
                                 <input type="text" id="keywords" name="keywords" required="" lay-verify="required"
-                                       autocomplete="off" class="layui-input" value="{$data.keywords}">
+                                    autocomplete="off" class="layui-input" value="{$data.keywords}">
                             </div>
                         </div>
                         <div class="layui-form-item">
@@ -86,7 +88,7 @@
                             </label>
                             <div class="layui-input-inline">
                                 <input type="text" id="model" name="model" required="" lay-verify="required"
-                                       autocomplete="off" class="layui-input" value="{$data.model}">
+                                    autocomplete="off" class="layui-input" value="{$data.model}">
 
                             </div>
                         </div>
@@ -96,7 +98,7 @@
                             </label>
                             <div class="layui-input-inline">
                                 <input type="text" id="ean" name="ean" required="" lay-verify="required"
-                                       autocomplete="off" class="layui-input" value="{$data.ean}">
+                                    autocomplete="off" class="layui-input" value="{$data.ean}">
 
                             </div>
                         </div>
@@ -105,13 +107,15 @@
                                 <span class="x-red">*</span>描述
                             </label>
                             <div class="layui-input-block w50">
-                                <textarea name="description" id="description" class="layui-textarea">{$data.description}</textarea>
+                                <textarea name="description" id="description"
+                                    class="layui-textarea">{$data.description}</textarea>
                             </div>
                         </div>
                     </div>
                     <div class="layui-tab-item">
                         <div class="layui-input-block">
-                                <textarea name="specifications" id="specifications"  class="layui-textarea" lay-verify="specifications">{$data.specifications}</textarea>
+                            <textarea name="specifications" id="specifications" class="layui-textarea"
+                                lay-verify="specifications">{$data.specifications}</textarea>
                         </div>
                     </div>
                     <div class="layui-tab-item">
@@ -120,20 +124,25 @@
                                 缩略图
                             </label>
                             <div class="layui-input-inline">
-                                <button class="layui-btn" type="button" onclick="xadmin.open('添加缩略图','{:url(\'media/image/list\',[\'path\'=>\'images\/\',\'type\'=>\'1\'])}')"><i class="layui-icon"></i>选择</button>
+                                <button class="layui-btn" type="button"
+                                    onclick="xadmin.open('添加缩略图','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'image\'])}')">
+                                    <i class="layui-icon"></i>选择</button>
                                 <div class="image" style="height: 92px;padding-top: 5px">
                                     <img src="{$data.thumbnail}" alt="" style="height: 92px">
-                                    <input type="hidden" name="thumbnail" value="{$data.thumbnail}" id="thumbnail" >
+                                    <input type="hidden" name="thumbnail" value="{$data.thumbnail}" id="thumbnail">
                                 </div>
                             </div>
                         </div>
                         <div class="layui-form-item">
-                            <label  class="layui-form-label">
+                            <label class="layui-form-label">
                                 相册
                             </label>
                             <div class="layui-input-block">
-                                <button class="layui-btn" type="button" onclick="xadmin.open('选择图片','{:url(\'media/image/list\',[\'path\'=>\'images\/\',\'type\'=>\'1\'])}')"><i class="layui-icon"></i>选择</button>
-                                <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;min-height: 100px">
+                                <button class="layui-btn" type="button"
+                                    onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'image\'])}')"><i
+                                        class="layui-icon"></i>选择</button>
+                                <blockquote class="layui-elem-quote layui-quote-nm"
+                                    style="margin-top: 10px;min-height: 100px">
                                     <div class="img-list" id="img-list">
                                         {notempty name="data.albums"}
                                         {volist name="data.albums" id="vo"}
@@ -150,7 +159,8 @@
                                 特色描述
                             </label>
                             <div class="layui-input-block">
-                                <textarea name="features" id="features" class="layui-textarea" lay-verify="features">{$data.features}</textarea>
+                                <textarea name="features" id="features" class="layui-textarea"
+                                    lay-verify="features">{$data.features}</textarea>
                             </div>
                         </div>
                     </div>
@@ -158,7 +168,7 @@
                         <div class="layui-form-item">
                             <div class="layui-input-block">
                                 <textarea name="desktop" id="desktop" placeholder="请输入内容" class="layui-textarea"
-                                          lay-verify="desktop">{$data.content.desktop}</textarea>
+                                    lay-verify="desktop">{$data.content.desktop}</textarea>
                             </div>
                         </div>
                     </div>
@@ -166,7 +176,7 @@
                         <div class="layui-form-item">
                             <div class="layui-input-block">
                                 <textarea name="mobile" id="mobile" class="layui-textarea"
-                                          lay-verify="mobile">{$data.content.mobile}</textarea>
+                                    lay-verify="mobile">{$data.content.mobile}</textarea>
                             </div>
                         </div>
                     </div>
@@ -199,38 +209,38 @@
 <script src="{{admin}}/lib/codemirror/mode/css/css.js"></script>
 <script src="{{admin}}/lib/codemirror/mode/htmlmixed/htmlmixed.js"></script>
 <script>
-    window.onload = function(){
-        window.desktop=CodeMirror.fromTextArea(document.getElementById("desktop"),{
-            mode:"text/html",
-            lineNumbers:true,
-            lineWrapping:true,
-            extraKeys:{"Ctrl-Q": function(cm){ cm.foldCode(cm.getCursor()); }},
+    window.onload = function () {
+        window.desktop = CodeMirror.fromTextArea(document.getElementById("desktop"), {
+            mode: "text/html",
+            lineNumbers: true,
+            lineWrapping: true,
+            extraKeys: { "Ctrl-Q": function (cm) { cm.foldCode(cm.getCursor()); } },
             foldGutter: true,
             gutters: ["CodeMirror-linenumbers", "CodeMirror-foldgutter"],
             theme: "monokai",
         });
-        desktop.setSize('','950px');
-        desktop.foldCode(CodeMirror.Pos(13, 0));
-        desktop.foldCode(CodeMirror.Pos(1, 0));
-        window.mobile=CodeMirror.fromTextArea(document.getElementById("mobile"),{
-            mode:"text/html",
-            lineNumbers:true,
-            lineWrapping:true,
-            extraKeys:{"Ctrl-Q": function(cm){ cm.foldCode(cm.getCursor()); }},
+        desktop.setSize('', '950px');
+        // desktop.foldCode(CodeMirror.Pos(13, 0));
+        // desktop.foldCode(CodeMirror.Pos(1, 0));
+        window.mobile = CodeMirror.fromTextArea(document.getElementById("mobile"), {
+            mode: "text/html",
+            lineNumbers: true,
+            lineWrapping: true,
+            extraKeys: { "Ctrl-Q": function (cm) { cm.foldCode(cm.getCursor()); } },
             foldGutter: true,
             gutters: ["CodeMirror-linenumbers", "CodeMirror-foldgutter"],
             theme: "monokai",
         })
-        mobile.setSize('','950px');
-        mobile.foldCode(CodeMirror.Pos(13, 0));
-        mobile.foldCode(CodeMirror.Pos(1, 0));
+        mobile.setSize('', '950px');
+        // mobile.foldCode(CodeMirror.Pos(13, 0));
+        // mobile.foldCode(CodeMirror.Pos(1, 0));
     }
-    layui.extend({tinymce: '{{admin}}/lib/extend/tinymce/tinymce'}).use(['form', 'layer', 'upload', 'tinymce', 'jquery'],
+    layui.extend({ tinymce: '{{admin}}/lib/extend/tinymce/tinymce' }).use(['form', 'layer', 'upload', 'tinymce', 'jquery'],
         function () {
             let $ = layui.jquery;
             let form = layui.form, upload = layui.upload, tinymce = layui.tinymce, layer = layui.layer;
-            tinymce.render({elem:"#features", height:300, plugins:'code', toolbar:'code', menubar:false,forced_root_block:false,});
-            tinymce.render({elem:"#specifications", height:300, plugins:'code', toolbar:'code', menubar:false,forced_root_block:false,});
+            tinymce.render({ elem: "#features", height: 300, plugins: 'code', toolbar: 'code', menubar: false, forced_root_block: false, });
+            tinymce.render({ elem: "#specifications", height: 300, plugins: 'code', toolbar: 'code', menubar: false, forced_root_block: false, });
             /*tinymce.render({elem: "#desktop", height: $(window).height()-80,
                 plugins: 'code autosave quickbars print preview searchreplace autolink fullscreen image link media codesample table charmap hr advlist lists wordcount imagetools indent2em',
                 toolbar: 'code undo redo | forecolor backcolor bold italic underline strikethrough | indent2em alignleft aligncenter alignright alignjustify outdent indent | link bullist numlist image table codesample | formatselect fontselect fontsizeselect',
@@ -247,17 +257,17 @@
                 forced_root_block:false,
             });*/
             form.verify({
-                features:function(){
+                features: function () {
                     tinyMCE.get("features").save()
                 },
-                specifications:function(){
+                specifications: function () {
                     tinyMCE.get("specifications").save()
                 },
                 desktop: function () {
                     window.desktop.save();
                     // tinyMCE.get("desktop").save() //好苦啊，tinyMCE需要这样保存到input框
                 },
-                mobile:function () {
+                mobile: function () {
                     window.mobile.save();
                     // tinyMCE.get("mobile").save()
                 }
@@ -271,12 +281,12 @@
                         data: data.field,
                         'success': function (result) {
                             if (result.status === 1) {
-                                layer.msg(result.message, {'icon': 1, 'time': 1000}, function () {
+                                layer.msg(result.message, { 'icon': 1, 'time': 1000 }, function () {
                                     xadmin.close();
                                     xadmin.father_reload();
                                 });
                             } else {
-                                layer.msg(result.message, {'icon': 5, 'time': 8000});
+                                layer.msg(result.message, { 'icon': 5, 'time': 8000 });
                             }
                         }
                     }, 'JSON');
