--- a/app/admin/view/media/image/select.html
+++ b/app/admin/view/media/image/select.html
@@ -33,9 +33,9 @@
 <div class="x-nav">
     <span class="layui-breadcrumb">
         <a href="">首页</a>
-        <a href="{:url('media/image/select',['path'=>'images/','pos'=>$pos])}">图片管理</a>
+        <a href="{:url('media/image/select',['path'=>'images/'])}">图片管理</a>
         {volist name="nav" id="vo" offset="1"}
-        <a href="{:url('media/image/select',['path'=>$vo.path,'pos'=>$pos])}">{$vo.name}</a>
+        <a href="{:url('media/image/select',['path'=>$vo.path])}">{$vo.name}</a>
         {/volist}
         <!--            <a><cite>图片列表</cite></a>-->
     </span>
@@ -61,13 +61,11 @@
                     <div class="item-list"
                         style="position: relative;display: inline-block;padding: 10px;text-align: center;float: left">
                         <div style="height: 126px;display: inline-block;padding: 10px;text-align: center;float: left">
-                            <a href="{:url('media/image/select',['path'=>$item.key,'pos'=>$pos])}"
-                                style="display: inline-block">
+                            <a href="{:url('media/image/select',['path'=>$item.key])}" style="display: inline-block">
                                 <i class="iconfont"
                                     style="font-size: 100px;color: #ffdc69;line-height: 100px">&#xe83c;</i>
                             </a>
-                            <p><a
-                                    href="{:url('media/image/select',['path'=>$item.key,'pos'=>$pos])}">{$item['name']}</a>
+                            <p><a href="{:url('media/image/select',['path'=>$item.key])}">{$item['name']}</a>
                             </p>
                         </div>
                     </div>
@@ -90,11 +88,11 @@
                                         style="position: absolute;top: 0;left: 0;z-index: -99;width: 1px;height: 1px;border: none;background: transparent">
                                     <li class="btnCopy"><a href="#" title="复制url链接"><span class="iconfont"
                                                 style="font-size: 16px">&#xe744;</span>复制</a></li>
-                                    <li><a href="javascript:;" onclick="insert('{$pos}','{$baseUrl}/{$item.key}')"
+                                    <li><a href="javascript:;" onclick="insert('{$class}','{$baseUrl}/{$item.key}')"
                                             title="选择并插入" style="font-size: 16px"><span
                                                 class="iconfont">&#xe6f7;</span><span style="font-size: 12px">
                                                 插入到</span></a></li>
-                                    <li><a href="javascript:;" onclick="in_list('img/list','{$baseUrl}/{$item.key}')"
+                                    <li><a href="javascript:;" onclick="in_list('img-list','{$baseUrl}/{$item.key}')"
                                             title="插入到列表" style="font-size: 16px"><span
                                                 class="iconfont">&#xe6f7;</span><span style="font-size: 12px">
                                                 插入相册</span></a></li>
