--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -46,7 +46,7 @@
 </div>
 <div class="hot common-width">
     <div class="min-list">
-        {notempty name="not"}
+        {notempty name="hot"}
         {volist name="hot" id="vo"}
         <div class="min-item">
             <a href="{$vo.path}">
