--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -277,7 +277,7 @@ body {
             .center-block();
         }
         .item-children .children-list a p {
-            .text-overflow-many(3)
+            .text-overflow-many()
         }
         //item-children End
         //all-category
