fix but : 在推荐管理里面的图片选择功能失效问题

--- a/app/admin/view/category/product_category/index.html
+++ b/app/admin/view/category/product_category/index.html
@@ -54,8 +54,10 @@
                                     {/if}
                                     {$vo.name}
                                 </td>
-                                <td><input type="text" class="layui-input x-sort" name="listorder value="
-                                        {$vo.listorder}"></td>
+                                <td>
+                                    <input type="text" class="layui-input x-sort" name="listorder"
+                                        value="{$vo.listorder}">
+                                </td>
                                 <td>
                                     {if($vo.status == 1)}
                                     <button class="layui-btn layui-btn-normal layui-btn-mini">启用</button>
