--- a/app/admin/view/content/notice/notice.html
+++ b/app/admin/view/content/notice/notice.html
@@ -8,7 +8,7 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'desktop\'])}')">
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'desktop\'])}')">
                         <i class="layui-icon"></i>选择
                     </button>
                     <div class="desktop" style="height: 92px;padding-top: 5px">
@@ -27,9 +27,8 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'mobile\'])}')">
-                        <i class="layui-icon"></i>选择
-                    </button>
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'mobile\'])}')">
+                        <i class="layui-icon"></i>选择</button>
                     <div class="mobile" style="height: 92px;padding-top: 5px">
                         {notempty name="data.mobile"}
                         <img src="{$data.mobile}" alt="" style="height: 92px">
