--- a/app/admin/view/content/prettiest/add.html
+++ b/app/admin/view/content/prettiest/add.html
@@ -28,8 +28,8 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'desktop\'])}')">
-                        <i class="layui-icon"></i>选择</button>
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'desktop\'])}')">
+                        <i class="layui-icon"></i>选择图片</button>
                     <div class="desktop" style="height: 92px;padding-top: 5px">
                         <img src="" alt="" style="height: 92px">
                         <input type="hidden" name="desktop" value="" id="desktop">
@@ -42,8 +42,8 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'mobile\'])}')"><i
-                            class="layui-icon"></i>选择</button>
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'mobile\'])}')">
+                        <i class="layui-icon"></i>选择</button>
                     <div class="mobile" style="height: 92px;padding-top: 5px">
                         <img src="" alt="" style="height: 92px">
                         <input type="hidden" name="mobile" value="" id="mobile">
