--- a/app/admin/view/content/prettiest/edit.html
+++ b/app/admin/view/content/prettiest/edit.html
@@ -29,9 +29,8 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'desktop\'])}')">
-                        <i class="layui-icon"></i>选择
-                    </button>
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'desktop\'])}')">
+                        <i class="layui-icon"></i>选择图片</button>
                     <div class="desktop" style="height: 92px;padding-top: 5px">
                         <img src="{$data.desktop}" alt="" style="height: 92px">
                         <input type="hidden" name="desktop" value="{$data.desktop}" id="desktop">
@@ -44,7 +43,7 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'mobile\'])}')">
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'class\'=>\'mobile\'])}')">
                         <i class="layui-icon"></i>选择
                     </button>
                     <div class="mobile" style="height: 92px;padding-top: 5px">
