产品列表页 + 产品详情页数据获取

--- a/app/frontend/view/desktop/product/detail.html
+++ b/app/frontend/view/desktop/product/detail.html
@@ -6,46 +6,6 @@
 {/block}
 {block name="style"}
 <link rel="stylesheet" href="{{frontend}}/desktop/css/page/Product-detail.css">
-<style>
-    .page-one .des-box { width: 80%; top: 7%; left: 10%; text-align: center; }
-    .page-two .des-box {  }
-    .page-three .des-box { width: 50%; top: 10%; left: 25%; text-align: center; }
-    .page-four .des-box { width: 50%; top: 5%; left: 25%; text-align: center; }
-    .page-five .des-box { width: 50%; top: 5%; left: 25%; text-align: center; }
-    .page-six .des-box { width: 50%; top: 10%; left: 25%; text-align: center; }
-    .page-seven .des-box { width: 30%; top: 15%; left: 7%; }
-    .page-eight .des-box { width: 30%; top: 15%; left: 65.3%; }
-    .page-nine .des-box {  }
-    .page-ten .des-box {  }
-    .page-eleven .des-box {  }
-
-    @media screen and (min-width: 768px) and (max-width: 991px) {
-        .page-one .des-box { width: 80%; top: 5%; left: 10%; }
-        .page-two .des-box {  }
-        .page-three .des-box { width: 80%; top: 10%; left: 10%; text-align: center; }
-        .page-four .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
-        .page-five .des-box { width: 80%; top: 1%; left: 10%; text-align: center; }
-        .page-six .des-box { width: 80%; top: 8%; left: 10%; text-align: center; }
-        .page-seven .des-box { width: 45%; top: 15%; left: 7%; }
-        .page-eight .des-box { width: 40%; top: 5%; left: 60%; }
-        .page-nine .des-box {  }
-        .page-ten .des-box {  }
-        .page-eleven .des-box {  }
-    }
-    @media screen and (min-width: 991px) and (max-width: 1199px) {
-        .page-one .des-box { width: 60%; top: 5%; left: 20%; }
-        .page-two .des-box {  }
-        .page-three .des-box { width: 80%; top: 8%; left: 10%; text-align: center; }
-        .page-four .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
-        .page-five .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
-        .page-six .des-box { width: 80%; top: 8%; left: 10%; text-align: center; }
-        .page-seven .des-box { width: 45%; top: 15%; left: 7%; }
-        .page-eight .des-box { width: 38%; top: 10%; left: 60%; }
-        .page-nine .des-box {  }
-        .page-ten .des-box {  }
-        .page-eleven .des-box {  }
-    }
-</style>
 {/block}
 
 {block name="body"}
@@ -63,258 +23,9 @@
     </div>
 
     <div class="product-Detail" id="product-Detail">
-        <div class="detail-page">
-            <!-- one -->
-            <div class="page-one page-box">
-                <div class="des-box">
-                    <h3>Rechargeable Battery Operated Fan With 3 Speeds</h3>
-                    <p>
-                        A life saver on hot days
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/1.jpg" alt="">
-                </div>
-            </div>
-            <!-- two -->
-            <div class="page-two page-box">
-                <div class="des-box">
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/2.jpg" alt="">
-                </div>
-            </div>
-            <!-- three -->
-            <div class="page-three page-box">
-                <div class="des-box">
-                    <h3>3 Speeds Cool You Down Fast</h3>
-                    <p>
-                        The ingenious fan features three speeds: low, medium, and high, fit-ting anyone's cooling needs.
-                        Just press the button to switch the fan on and adjust wind modes.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/3.jpg" alt="">
-                </div>
-            </div>
-            <!-- four -->
-            <div class="page-four page-box">
-                <div class="des-box">
-                    <h3>A Portable But Furthermore, A Desktop Fan</h3>
-                    <p>
-                        It can be a handheld fan or as a desktop air fan according to your individual needs.
-                        With a plus stand you can use it as a desktop fan as well.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/4.jpg" alt="">
-                </div>
-            </div>
-            <!-- five -->
-            <div class="page-five page-box">
-                <div class="des-box">
-                    <h3>Dual Power Source</h3>
-                    <p>
-                        This fan comes with a built-in 1200mAh 18650 Li-ion battery, working up to 8 hours after a full charge.
-                        It can also be used via USB port from your computer, power bank, USB charger or other devices with USB output.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/5.jpg" alt="">
-                </div>
-            </div>
-            <!-- six -->
-            <div class="page-six page-box">
-                <div class="des-box">
-                    <h3>Choose Your Desire Direction of Wind</h3>
-                    <p>
-                        The head of this  fan can rotates up to 180 degrees and the handle is extendable.
-                        Therefore, so you can direct the cool air to where you need it most.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/6.jpg" alt="">
-                </div>
-            </div>
-            <!-- seven -->
-            <div class="page-seven page-box">
-                <div class="des-box">
-                    <h3>Enjoy A Whispering Breeze</h3>
-                    <p>
-                        The fan moves loads of air yet it is very quiet.
-                        Its brushless motor keeps you cool and comfortable while you are concentrating or sleeping.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/7.jpg" alt="">
-                </div>
-            </div>
-            <!-- eight -->
-            <div class="page-eight page-box">
-                <div class="des-box">
-                    <h3>Removable Grill Cool and Clean</h3>
-                    <p>
-                        Fans would accumulate dirt and dust overtime. While the grill of our fan can be removed easily by turning it anticlockwise. Place the grill in a sink and turn on the faucet. Dust the blades with a brush or sponge.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/8.jpg" alt="">
-                </div>
-            </div>
-            <!-- nine -->
-            <div class="page-nine page-box">
-                <div class="des-box">
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/9.jpg" alt="">
-                </div>
-            </div>
-            <!-- ten -->
-            <div class="page-ten page-box">
-                <div class="des-box">
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/10.jpg" alt="">
-                </div>
-            </div>
-            <!-- eleven -->
-            <div class="page-eleven page-box">
-                <div class="des-box">
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/11.jpg" alt="">
-                </div>
-            </div>
-        </div>
+        {$data.content.desktop|raw}
 
-        <div class="product-Specifications">
-            <div class="offset-box" id="specification">
-                <ul>
-                    <li class="li_title">
-                        <strong>TECHNICAL SPECIFICATIONS</strong>
-                    </li>
-                    <li>
-                        <strong>Model</strong>
-                        <div>
-                            <p>WN531A6</p>
-                        </div>
-                    </li>
-                    <li>
-                        <strong>Ports</strong>
-                        <div>
-                            <p>1 x 10/100/1000Mbps WAN</p>
-                            <p>4 x 10/100/1000Mbps LAN</p>
-                            <p>1 x USB 3.0</p>
-                            <p>1 x DC Power Jack Port</p>
-                        </div>
-                    </li>
-                    <li>
-                        <strong>Buttons</strong>
-                        <div>
-                            <p>1 x Power On/Off button</p>
-                            <p>1 x Reset button</p>
-                            <p>1 x WPS button</p>
-                            <p>1 x TURBO button</p>
-                            <p>1 x Touch cover button</p>
-                        </div>
-                    </li>
-                    <li>
-                        <strong>LED</strong>
-                        <div>
-                            <p>1 x WiFi</p>
-                            <p>1 x WAN</p>
-                            <p>4 x LAN</p>
-                            <p>1 x Power</p>
-                            <p>1 x Logo</p>
-                        </div>
-                    </li>
-                    <li>
-                        <strong>Power Supply</strong>
-                        <div>
-                            <p>DC5V / 3A</p>
-                        </div>
-                    </li>
-                    <li>
-                        <strong>Rated Voltage / Frequency</strong>
-                        <div>
-                            <p>input:100-240 Va.c. 50/60Hz</p>
-                        </div>
-                    </li>
-                </ul>
-                <ul>
-                    <li class="li_title">
-                        <strong>DIMENSIONS</strong>
-                    </li>
-                    <li>
-                        <strong>Unit Dimensions</strong>
-                        <div>
-                            <p>200mm x 200mm x 30mm ( L x W x H )</p>
-                        </div>
-                    </li>
-                </ul>
-                <ul>
-                    <li class="li_title">
-                        <strong>WIRELESS</strong>
-                    </li>
-                    <li>
-                        <strong>Standard</strong>
-                        <div>
-                            <p>IEEE 802.11a/b/g/n/ac</p>
-                        </div>
-                    </li>
-                    <li>
-                        <strong>Speed</strong>
-                        <div>
-                            <p>IEEE 802.11ac: up to 1733Mbps</p>
-                            <p>IEEE 802.11n: up to 300Mbps</p>
-                            <p>IEEE 802.11g: 54Mbps</p>
-                            <p>IEEE 802.11b: 11Mbps</p>
-                            <p>IEEE 802.11a: up to 54Mbps</p>
-                        </div>
-                    </li>
-                    <li>
-                        <strong>Frequency Band</strong>
-                        <div>
-                            <p>2.4GHz, 5GHz</p>
-                        </div>
-                    </li>
-                    <li>
-                        <strong>Wireless Security</strong>
-                        <div>
-                            <p>WPA-PSK/ WPA2-PSK encryption</p>
-                        </div>
-                    </li>
-                    <li>
-                        <strong>Antennas</strong>
-                        <div>
-                            <p>6 x 5dBi Omni Directional Antennas</p>
-                        </div>
-                    </li>
-                </ul>
-                <ul>
-                    <li class="li_title">
-                        <strong>PACKAGE</strong>
-                    </li>
-                    <li>
-                        <strong>In The Box</strong>
-                        <div>
-                            <p>1 x Wireless Router</p>
-                            <p>1 x RJ45 Networking Cable</p>
-                            <p>1 x Power Adapter</p>
-                            <p>1 x Quick Guide</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        {$data.specifications}
     </div>
 
 </div>
