--- a/public/static/frontend/desktop/css/page/Product-detail.less
+++ b/public/static/frontend/desktop/css/page/Product-detail.less
@@ -114,22 +114,20 @@
         position: absolute;
         z-index: 1;
         h3 {
-            font-size: 32px;
+            font-size: 55px;
         }
         p {
             margin-top: 10px;
-            font-size: 18px;
-            line-height: 22px;
+            font-size: 25px;
         }
     }
     @media screen and (min-width: 768px) and (max-width: 991px) {
         .des-box h3 {
-            font-size: 18px;
+            font-size: 20px;
         }
         .des-box p {
             margin-top: 5px;
             font-size: 14px;
-            line-height: 18px;
         }
     }
     @media screen and (min-width: 992px) and (max-width: 1199px) {
@@ -138,6 +136,22 @@
         }
         .des-box p {
             font-size: 16px;
+        }
+    }
+    @media screen and (min-width: 1200px) and (max-width: 1365px) {
+        .des-box h3 {
+            font-size: 30px;
+        }
+        .des-box p {
+            font-size: 18px;
+        }
+    }
+    @media screen and (min-width: 1366px) and (max-width: 1600px) {
+        .des-box h3 {
+            font-size: 36px;
+        }
+        .des-box p {
+            font-size: 20px;
         }
     }
 }
