--- a/public/static/frontend/mobile/css/page/Product-list.less
+++ b/public/static/frontend/mobile/css/page/Product-list.less
@@ -15,6 +15,7 @@
     .title {
         padding: 20px 10px 0;
         h3 {
+            display: inline-block;
             margin: 15px 0;
             color: @activeColor;
             font-size: 18px;
