--- a/public/static/frontend/mobile/css/public/components.less
+++ b/public/static/frontend/mobile/css/public/components.less
@@ -104,6 +104,7 @@ body {
     background: @bodyBgColor;
     transition: all .3S;
     font-size: 14px;
+    color: #333;
     //padding-top: 60px;
 }
 
