--- a/app/frontend/view/mobile/product/detail.html
+++ b/app/frontend/view/mobile/product/detail.html
@@ -8,150 +8,12 @@
 {block name="style"}
 <link rel="stylesheet" href="{{frontend}}/lib/Swiper/swiper.min.css">
 <link rel="stylesheet" href="{{frontend}}/mobile/css/page/Product-detail.css">
-<style>
-    *{
-        margin: 0;
-        padding: 0
-    }
-    div#detail_page_box > section > div > div.detail_box_text > strong {
-        display:inline-block
-    }
-    .relative {
-        position:relative
-    }
-    .absolute {
-        position:absolute
-    }
-    .text_center {
-        text-align:center
-    }
-    div#detail_page_box > section > div > div.detail_box_img > img {
-        width:100%
-    }
-    div#detail_page_box > section > div > div.detail_box_text > strong { margin-bottom:2% }
-    @media screen and (max-width:767px){
-        .img_pc { display:none }
-        div#detail_page_box > section > div > div.detail_box_text > strong { font-size: 16px; }
-        div#detail_page_box > section > div > div.detail_box_text > p { font-size: 14px; color: #888; }
-        div#detail_page_box > section > div > div.detail_box_text {
-            position:inherit;
-            text-align:left;
-            padding:50px 10px 20px;
-            background: #fff;
-        }
-    }
-    @media screen and (min-width:768px){
-        .img_mobile { display:none }
-        div#detail_page_box > section > div > div.detail_box_img { line-height:0 }
-        div#detail_page_box > section > div > div.detail_box_text > strong { font-size:18px }
-        div#detail_page_box > section > div > div.detail_box_text > p { font-size:13px }
-        div#detail_page_box > section > div.detail_box_two > div.detail_box_text > strong,
-        div#detail_page_box > section > div.detail_box_two > div.detail_box_text > p,
-        div#detail_page_box > section > div.detail_box_three > div.detail_box_text > strong,
-        div#detail_page_box > section > div.detail_box_three > div.detail_box_text > p,
-        div#detail_page_box > section > div.detail_box_four > div.detail_box_text > strong,
-        div#detail_page_box > section > div.detail_box_four > div.detail_box_text > p,
-        div#detail_page_box > section > div.detail_box_five > div.detail_box_text > strong,
-        div#detail_page_box > section > div.detail_box_five > div.detail_box_text > p,
-        div#detail_page_box > section > div.detail_box_six > div.detail_box_text > strong,
-        div#detail_page_box > section > div.detail_box_six > div.detail_box_text > p,
-        div#detail_page_box > section > div.detail_box_seven > div.detail_box_text > strong,
-        div#detail_page_box > section > div.detail_box_seven > div.detail_box_text > p,
-        div#detail_page_box > section > div.detail_box_eight > div.detail_box_text > strong,
-        div#detail_page_box > section > div.detail_box_eight > div.detail_box_text > p,
-        div#detail_page_box > section > div.detail_box_nine > div.detail_box_text > strong,
-        div#detail_page_box > section > div.detail_box_nine > div.detail_box_text > p {
-            color:#fff
-        }
-        div#detail_page_box > section > div.detail_box_one > div.detail_box_text {
-            width:46%;
-            margin-left:27%;
-            top:16%
-        }
-        div#detail_page_box > section > div.detail_box_two > div.detail_box_text {
-            width:64%;
-            margin-left:18%;
-            top:7%
-        }
-        div#detail_page_box > section > div.detail_box_three > div.detail_box_text {
-            width:60%;
-            margin-left:20%;
-            top:7%
-        }
-        div#detail_page_box > section > div.detail_box_four > div.detail_box_text {
-            width:50%;
-            margin-left:25%;
-            top:8%
-        }
-        div#detail_page_box > section > div.detail_box_five > div.detail_box_text {
-            width:60%;
-            margin-left:20%;
-            top:10%
-        }
-        div#detail_page_box > section > div.detail_box_six > div.detail_box_text {
-            width:60%;
-            margin-left:20%;
-            top:10%
-        }
-        div#detail_page_box > section > div.detail_box_seven > div.detail_box_text {
-            width:64%;
-            margin-left:18%;
-            top:8%
-        }
-        div#detail_page_box > section > div.detail_box_eight > div.detail_box_text {
-            width:26%;
-            margin-left:55%;
-            top:36%
-        }
-        div#detail_page_box > section > div.detail_box_nine > div.detail_box_text {
-            width:30%;
-            margin-left:13.5%;
-            top:18%
-        }
-    }
-    @media screen and (min-width:992px){
-        div#detail_page_box > section > div > div.detail_box_text > strong { font-size:22px }
-        div#detail_page_box > section > div > div.detail_box_text > p { font-size:14px }
-    }
-    @media screen and (min-width:1100px){
-        div#detail_page_box > section > div.detail_box_one > div.detail_box_text { width:40%; margin-left:30% }
-        div#detail_page_box > section > div.detail_box_seven > div.detail_box_text { width:56%; margin-left:22% }
-    }
-    @media screen and (min-width:1300px){
-        div#detail_page_box > section > div > div.detail_box_text > strong { font-size:26px }
-        div#detail_page_box > section > div > div.detail_box_text > p { font-size:16px }
-    }
-    @media screen and (min-width:1400px){
-        div#detail_page_box > section > div.detail_box_one > div.detail_box_text {
-            width:40%;
-            margin-left:30%
-        }
-        div#detail_page_box > section > div.detail_box_two > div.detail_box_text {
-            top:7%
-        }
-        div#detail_page_box > section > div.detail_box_seven > div.detail_box_text { width:48%; margin-left:26% }
-    }
-    @media screen and (min-width:1600px){
-        div#detail_page_box > section > div > div.detail_box_text > strong { font-size:30px }
-        div#detail_page_box > section > div > div.detail_box_text > p { font-size:18px }
-    }
-    @media screen and (min-width:1700px){
-        div#detail_page_box > section > div > div.detail_box_text > strong { font-size:35px }
-        div#detail_page_box > section > div > div.detail_box_text > p { font-size:21px }
-    }
-    @media screen and (min-width: 1366px){
-        div#detail_page_box > section > div > div.detail_box_text > strong,div#detail_page_box > section > div > div.detail_box_text > p {
-            opacity: 0;
-            margin-top: 5%
-        }
-    }
-</style>
 {/block}
 
 {block name="body"}
 <div class="product-container">
 
-    <div class="product-gallery">
+    <!--<div class="product-gallery">
         <h3>Rechargeable Battery Operated Fan With 3 Speeds</h3>
         <div class="swiper-container">
             <div class="swiper-wrapper">
@@ -171,11 +33,11 @@
                     <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Scale/5.jpg" alt="">
                 </div>
             </div>
-            <div class="swiper-pagination"></div><!--分页器-->
-            <div class="swiper-button-prev"></div><!--左箭头-->
-            <div class="swiper-button-next"></div><!--右箭头-->
+            <div class="swiper-pagination"></div>&lt;!&ndash;分页器&ndash;&gt;
+            <div class="swiper-button-prev"></div>&lt;!&ndash;左箭头&ndash;&gt;
+            <div class="swiper-button-next"></div>&lt;!&ndash;右箭头&ndash;&gt;
         </div>
-    </div>
+    </div>-->
 
     <div class="product-nav">
         <div class="sub_nav">
@@ -187,258 +49,9 @@
     </div>
 
     <div class="product-Detail" id="product-Detail">
-        <div class="detail-page">
-            <!-- one -->
-            <div class="page-one page-box">
-                <div class="des-box">
-                    <h3>Rechargeable Battery Operated Fan With 3 Speeds</h3>
-                    <p>
-                        A life saver on hot days
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/1.jpg" alt="">
-                </div>
-            </div>
-            <!-- two -->
-            <div class="page-two page-box">
-                <div class="des-box">
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/2.jpg" alt="">
-                </div>
-            </div>
-            <!-- three -->
-            <div class="page-three page-box">
-                <div class="des-box">
-                    <h3>3 Speeds Cool You Down Fast</h3>
-                    <p>
-                        The ingenious fan features three speeds: low, medium, and high, fit-ting anyone's cooling needs.
-                        Just press the button to switch the fan on and adjust wind modes.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/3.jpg" alt="">
-                </div>
-            </div>
-            <!-- four -->
-            <div class="page-four page-box">
-                <div class="des-box">
-                    <h3>A Portable But Furthermore, A Desktop Fan</h3>
-                    <p>
-                        It can be a handheld fan or as a desktop air fan according to your individual needs.
-                        With a plus stand you can use it as a desktop fan as well.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/4.jpg" alt="">
-                </div>
-            </div>
-            <!-- five -->
-            <div class="page-five page-box">
-                <div class="des-box">
-                    <h3>Dual Power Source</h3>
-                    <p>
-                        This fan comes with a built-in 1200mAh 18650 Li-ion battery, working up to 8 hours after a full charge.
-                        It can also be used via USB port from your computer, power bank, USB charger or other devices with USB output.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/5.jpg" alt="">
-                </div>
-            </div>
-            <!-- six -->
-            <div class="page-six page-box">
-                <div class="des-box">
-                    <h3>Choose Your Desire Direction of Wind</h3>
-                    <p>
-                        The head of this  fan can rotates up to 180 degrees and the handle is extendable.
-                        Therefore, so you can direct the cool air to where you need it most.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/6.jpg" alt="">
-                </div>
-            </div>
-            <!-- seven -->
-            <div class="page-seven page-box">
-                <div class="des-box">
-                    <h3>Enjoy A Whispering Breeze</h3>
-                    <p>
-                        The fan moves loads of air yet it is very quiet.
-                        Its brushless motor keeps you cool and comfortable while you are concentrating or sleeping.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/7.jpg" alt="">
-                </div>
-            </div>
-            <!-- eight -->
-            <div class="page-eight page-box">
-                <div class="des-box">
-                    <h3>Removable Grill Cool and Clean</h3>
-                    <p>
-                        Fans would accumulate dirt and dust overtime. While the grill of our fan can be removed easily by turning it anticlockwise. Place the grill in a sink and turn on the faucet. Dust the blades with a brush or sponge.
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/8.jpg" alt="">
-                </div>
-            </div>
-            <!-- nine -->
-            <div class="page-nine page-box">
-                <div class="des-box">
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/9.jpg" alt="">
-                </div>
-            </div>
-            <!-- ten -->
-            <div class="page-ten page-box">
-                <div class="des-box">
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/10.jpg" alt="">
-                </div>
-            </div>
-            <!-- eleven -->
-            <div class="page-eleven page-box">
-                <div class="des-box">
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/11.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
+        {$data.content.mobile|raw}
 
-    <div class="product-Specifications">
-        <div class="offset-box" id="specification">
-            <ul>
-                <li class="li_title">
-                    <strong>TECHNICAL SPECIFICATIONS</strong>
-                </li>
-                <li>
-                    <strong>Model</strong>
-                    <div>
-                        <p>WN531A6</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Ports</strong>
-                    <div>
-                        <p>1 x 10/100/1000Mbps WAN</p>
-                        <p>4 x 10/100/1000Mbps LAN</p>
-                        <p>1 x USB 3.0</p>
-                        <p>1 x DC Power Jack Port</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Buttons</strong>
-                    <div>
-                        <p>1 x Power On/Off button</p>
-                        <p>1 x Reset button</p>
-                        <p>1 x WPS button</p>
-                        <p>1 x TURBO button</p>
-                        <p>1 x Touch cover button</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>LED</strong>
-                    <div>
-                        <p>1 x WiFi</p>
-                        <p>1 x WAN</p>
-                        <p>4 x LAN</p>
-                        <p>1 x Power</p>
-                        <p>1 x Logo</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Power Supply</strong>
-                    <div>
-                        <p>DC5V / 3A</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Rated Voltage / Frequency</strong>
-                    <div>
-                        <p>input:100-240 Va.c. 50/60Hz</p>
-                    </div>
-                </li>
-            </ul>
-            <ul>
-                <li class="li_title">
-                    <strong>DIMENSIONS</strong>
-                </li>
-                <li>
-                    <strong>Unit Dimensions</strong>
-                    <div>
-                        <p>200mm x 200mm x 30mm ( L x W x H )</p>
-                    </div>
-                </li>
-            </ul>
-            <ul>
-                <li class="li_title">
-                    <strong>WIRELESS</strong>
-                </li>
-                <li>
-                    <strong>Standard</strong>
-                    <div>
-                        <p>IEEE 802.11a/b/g/n/ac</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Speed</strong>
-                    <div>
-                        <p>IEEE 802.11ac: up to 1733Mbps</p>
-                        <p>IEEE 802.11n: up to 300Mbps</p>
-                        <p>IEEE 802.11g: 54Mbps</p>
-                        <p>IEEE 802.11b: 11Mbps</p>
-                        <p>IEEE 802.11a: up to 54Mbps</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Frequency Band</strong>
-                    <div>
-                        <p>2.4GHz, 5GHz</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Wireless Security</strong>
-                    <div>
-                        <p>WPA-PSK/ WPA2-PSK encryption</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Antennas</strong>
-                    <div>
-                        <p>6 x 5dBi Omni Directional Antennas</p>
-                    </div>
-                </li>
-            </ul>
-            <ul>
-                <li class="li_title">
-                    <strong>PACKAGE</strong>
-                </li>
-                <li>
-                    <strong>In The Box</strong>
-                    <div>
-                        <p>1 x Wireless Router</p>
-                        <p>1 x RJ45 Networking Cable</p>
-                        <p>1 x Power Adapter</p>
-                        <p>1 x Quick Guide</p>
-                    </div>
-                </li>
-            </ul>
-        </div>
+        {$data.specifications}
     </div>
 </div>
 {/block}
