--- a/public/static/frontend/desktop/css/page/Product-detail.css
+++ b/public/static/frontend/desktop/css/page/Product-detail.css
@@ -127,22 +127,19 @@
   z-index: 1;
 }
 .product-Detail .des-box h3 {
-  font-size: 32px;
+  font-size: 55px;
 }
 .product-Detail .des-box p {
   margin-top: 10px;
-  font-size: 18px;
-  color: #666;
-  line-height: 22px;
+  font-size: 25px;
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .product-Detail .des-box h3 {
-    font-size: 18px;
+    font-size: 20px;
   }
   .product-Detail .des-box p {
     margin-top: 5px;
     font-size: 14px;
-    line-height: 18px;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
@@ -151,6 +148,22 @@
   }
   .product-Detail .des-box p {
     font-size: 16px;
+  }
+}
+@media screen and (min-width: 1200px) and (max-width: 1365px) {
+  .product-Detail .des-box h3 {
+    font-size: 30px;
+  }
+  .product-Detail .des-box p {
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 1366px) and (max-width: 1600px) {
+  .product-Detail .des-box h3 {
+    font-size: 36px;
+  }
+  .product-Detail .des-box p {
+    font-size: 20px;
   }
 }
 /* 參數 */
