--- a/public/static/frontend/desktop/css/page/Product-list.less
+++ b/public/static/frontend/desktop/css/page/Product-list.less
@@ -23,6 +23,7 @@ section {
     .title {
         padding-top: 20px;
         h3 {
+            display: inline-block;
             margin: 15px 0;
             color: @activeColor;
             font-size: 18px;
@@ -51,7 +52,6 @@ section {
 
     .list-box {
         .clearFix();
-        border-top: 1px solid @borderColor;
         border-left: 1px solid @borderColor;
         .list-item {
             float: left;
@@ -60,6 +60,13 @@ section {
             border: 1px solid @borderColor;
             border-left: none;
             border-top: none;
+        }
+        .list-item:nth-of-type(1),
+        .list-item:nth-of-type(2),
+        .list-item:nth-of-type(3),
+        .list-item:nth-of-type(4),
+        .list-item:nth-of-type(5) {
+            border-top: 1px solid @borderColor;
         }
         .list-item a {
             display: block;
