--- a/public/static/frontend/mobile/css/public/components.css
+++ b/public/static/frontend/mobile/css/public/components.css
@@ -171,6 +171,7 @@ body {
   background: #f5f5f5;
   transition: all 0.3S;
   font-size: 14px;
+  color: #333;
 }
 .g-notice {
   padding: 20px 10px;
