--- a/app/frontend/view/desktop/product/detail.html
+++ b/app/frontend/view/desktop/product/detail.html
@@ -12,7 +12,7 @@
 <div class="product-container">
     <div class="product-nav">
         <div class="common-width">
-            <h3>Rechargeable Battery Operated Fan With 3 Speeds</h3>
+            <h3>{$data.title}</h3>
             <div class="sub_nav">
                 <span class="active">Overview</span>
                 <span>Specs</span>
